completed basic layout.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Theodorius Maximus</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Sir Theodorius Maximus</title>
   </head>
   <body>
     <main id="main">
       <h1 id="title">Sir Theodorius Maximus</h1>
-      <p id="img-caption">The weiner dog that saved millions of lives</p>
       <div id="img-div">
         <img
           src="images/theo-sleepy.png"
           alt="a picture of a sleepy weiner dog"
-          width="600"
           id="image"
         />
+        <figcaption id="img-caption">
+          He always knew the neighbors dogs were evil. He commited his life to
+          barking at them.
+        </figcaption>
       </div>
-      <p id="tribute-info">
-        He always knew the neighbors dogs were evil. He dedicate his life to
-        barking at them.
+      <ul id="tribute-info">
+        <li>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quod
+          itaque vitae temporibus, labore delectus blanditiis iure fugiat dicta
+          amet laudantium perferendis maiores eligendi natus doloribus voluptas
+          placeat excepturi! Dolores.
+        </li>
+      </ul>
+      <p>
+        Here's a link to
+        <a
+          href="https://en.wikipedia.org/wiki/Dachshund"
+          id="tribute-link"
+          target="_blank"
+          >learn more</a
+        >
+        about the weiner that saved a million lives.
       </p>
     </main>
   </body>
