--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <main id="main">
-      <h1 id="title">Sir Theodorius Maximus</h1>
+      <div class="title-div">
+        <h1 id="title">Sir Theodorius Maximus</h1>
+        <p id="subtitle">The weiner dog that saved a million lives.</p>
+      </div>
+
       <div id="img-div">
         <img
           src="images/theo-sleepy.png"
@@ -16,27 +20,41 @@
           id="image"
         />
         <figcaption id="img-caption">
-          He always knew the neighbors dogs were evil. He commited his life to
-          barking at them.
+          He always wore a tie. Even when he was sleeping.
         </figcaption>
       </div>
       <ul id="tribute-info">
+        <li class="margin-bottom">
+          Sir Theodorius Maximus, or Theo for short, was the fastest weiner
+          alive. The legend goes that he could outrun a cheteah wihout even
+          trying.
+        </li>
+        <li class="margin-bottom">
+          Just his bark alone were scare off any predators in the nearby area.
+          He was feared by all. And for good reason. It was said the he could
+          rip up a chew toy in as little as 5 minutes. His mamma stoped buying
+          him chew toys because they wouldn't last enough.
+        </li>
+        <li class="margin-bottom">
+          Despite his fearsome attitude, he was always professional. He was
+          never seen without his tie.
+        </li>
         <li>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quod
-          itaque vitae temporibus, labore delectus blanditiis iure fugiat dicta
-          amet laudantium perferendis maiores eligendi natus doloribus voluptas
-          placeat excepturi! Dolores.
+          How did he save a million lives you might ask? There once was an evil
+          rooster that lived down the road. The rooster was know to too
+          terrorize the neightboord by waking everyone up with his
+          cockadoodledoo's every morning. Sir Theodorius Maximus put an end to
+          it... by barking at him.
         </li>
       </ul>
-      <p>
-        Here's a link to
-        <a
+
+      <p id="more-info">
+        Click&nbsp<a
           href="https://en.wikipedia.org/wiki/Dachshund"
           id="tribute-link"
           target="_blank"
-          >learn more</a
-        >
-        about the weiner that saved a million lives.
+          >here</a
+        >&nbspto learn more about the weiner that saved a million lives.
       </p>
     </main>
   </body>
