--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul id="tribute-info">
         <li class="margin-bottom">
           Sir Theodorius Maximus, or Theo for short, was the fastest weiner
-          alive. The legend goes that he could outrun a cheteah wihout even
+          alive. The legend goes that he could outrun a cheteah without even
           trying.
         </li>
         <li class="margin-bottom">
