--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
         </li>
         <li>
           How did he save a million lives you might ask? There once was an evil
-          rooster that lived down the road. The rooster was know to too
-          terrorize the neightboord by waking everyone up with his
-          cockadoodledoo's every morning. Sir Theodorius Maximus put an end to
-          it... by barking at him.
+          rooster that lived down the road. The rooster was known to terrorize
+          the neighborhood by waking everyone up with his cockadoodledoo's every
+          morning. Sir Theodorius Maximus put an end to it... by barking at him.
         </li>
       </ul>
 
